--- a/META.yml
+++ b/META.yml
@@ -6,10 +6,8 @@ build_requires:
   Dir::Self: 0
   Test::More: 0
   strict: 0
-configure_requires:
-  ExtUtils::MakeMaker: 6.56
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.78, CPAN::Meta::Converter version 2.132661'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,5 +23,6 @@ requires:
   XSLoader: 0
   perl: 5.012000
   warnings: 0
-resources: {}
-version: 0.01
+resources:
+  repository: git://github.com/mauke/Keyword-Simple
+version: 0.02
